<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.CalculatorFragment">

   <ImageView
       android:id="@+id/imgLove"
       android:src="@drawable/first_img"
       android:scaleType="center"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_width="420dp"
       android:layout_height="250dp"/>

    <TextView
        android:id="@+id/loveCalculator"
        android:textColor="#6C63FE"
        android:textSize="28sp"
        android:fontFamily="serif"
        android:text="@string/love_calculator"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/firstName"
        android:text="@string/first_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/loveCalculator"
        app:layout_constraintStart_toStartOf="@id/loveCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/you"
        android:textSize="14sp"
        android:hint="@string/you"
        android:paddingHorizontal="20sp"
        android:textColorHint="@color/black"
        android:background="@drawable/background"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <TextView
        android:id="@+id/secondName"
        android:text="@string/second_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/you"
        app:layout_constraintStart_toStartOf="@id/loveCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/me"
        android:textSize="14sp"
        android:hint="@string/me"
        android:paddingHorizontal="20sp"
        android:textColorHint="@color/black"
        android:background="@drawable/background"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20sp"
        app:layout_constraintStart_toStartOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@id/secondName"
        android:layout_width="match_parent"
        android:layout_height="45dp"/>

    <Button
        android:id="@+id/btn_calculate"
        android:backgroundTint="#6C63FE"
        android:fontFamily="serif"
        android:text="@string/calculate"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="40dp"/>

    <TextView

        android:id="@+id/home"
        android:text="@string/home"
        android:textColor="@color/black"
        android:layout_margin="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/ic_baseline_heart_broken_24" />

    <TextView
        android:id="@+id/history"
        android:text="@string/history"
        android:textColor="@color/black"
        android:layout_margin="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableTopCompat="@drawable/ic_baseline_bar_chart_24" />
</androidx.constraintlayout.widget.ConstraintLayout>